<resources>
    <string name="app_name">ComposeTalk</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn">Sign In</string>
</resources>